--- a/index.html
+++ b/index.html
@@ -1324,7 +1324,6 @@ outline: none;
   </div>
 </div>
 
-
 <div class="p50c6Container" id="pltmh">
   <div class="p50c6Title">
     <h2 data-aos="fade-up" data-aos-anchor-placement="top-bottom">ABOUT <b>GREEN ENERGY</b></h2>
@@ -1474,6 +1473,234 @@ outline: none;
     </div>
     </div>
   </div>
+  <div class="p50c9Content">
+    <div class="p50c9ContentTop" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+
+      <div class="p50c9Carousel01F p50c9carousel01">
+         <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+          <div class="b-slider__slide_inner">
+            <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img01.jpg);"></div>
+            <div class="p50c9SwiperInner">
+              <h3>Doriane Pin's F1 Academy Race Livery Revealed</h3>
+              <a href="" class="p50generalBtn">
+                <i></i>
+                <p>Read more</p>
+              </a>
+            </div>
+          </div>
+        </div> 
+        <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+          <div class="b-slider__slide_inner">
+            <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img06.jpg);"></div>
+            <div class="p50c9SwiperInner">
+              <h3>Behind the Winning Chemistry - PETRONAS Fluid Technology Solutions (TM)</h3>
+              <a href="https://www.petronas.com/flow/technology/behind-winning-chemistry" target="_blank" class="p50generalBtn">
+                <i></i>
+                <p>Read more</p>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+          <div class="b-slider__slide_inner">
+            <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img02.jpg);"></div>
+            <div class="p50c9SwiperInner">
+              <h3>PETRONAS Triumphs in the Dakar Rally 2016</h3>
+              <a href="" class="p50generalBtn">
+                <i></i>
+                <p>Read more</p>
+              </a>
+            </div>
+          </div>
+        </div> 
+        <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+          <div class="b-slider__slide_inner">
+            <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img07.png);"></div>
+            <div class="p50c9SwiperInner">
+              <h3>Unlocking New Opportunities Through Carbon Capture & Storage</h3>
+              <a href="https://www.petronas.com/flow/technology/unlocking-new-opportunities-through-carbon-capture-storage" target="_blank" class="p50generalBtn">
+                <i></i>
+                <p>Read more</p>
+              </a>
+            </div>
+          </div>
+        </div>
+      <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+          <div class="b-slider__slide_inner">
+            <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img03.jpg);"></div>
+            <div class="p50c9SwiperInner">
+              <h3>Doriane Pin's F1 Academy Race Livery Revealed</h3>
+              <a href="" class="p50generalBtn">
+                <i></i>
+                <p>Read more</p>
+              </a>
+            </div>
+          </div>
+        </div> 
+        <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+          <div class="b-slider__slide_inner">
+            <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img08.jpeg);"></div>
+            <div class="p50c9SwiperInner">
+              <h3>Meet ANYmal!</h3>
+              <a href="https://www.petronas.com/flow/technology/meet-anymal" target="_blank" class="p50generalBtn">
+                <i></i>
+                <p>Read more</p>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      
+     <div class="p50c9carouselGeneral p50c9carousel01 owl-carousel owl-theme">
+        <div class="item">
+          <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img01.jpg);"></div>
+            <div class="p50c9SwiperInner">
+              <h3>Doriane Pin's F1 Academy Race Livery Revealed</h3>
+              <a href="" class="p50generalBtn">
+                <i></i>
+                <p>Read more</p>
+              </a>
+            </div>
+        </div>
+        <div class="item">
+          <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img02.jpg);"></div>
+            <div class="p50c9SwiperInner">
+              <h3>PETRONAS Triumphs in the Dakar Rally 2016</h3>
+              <a href="" class="p50generalBtn">
+                <i></i>
+                <p>Read more</p>
+              </a>
+            </div>
+        </div>
+        <div class="item">
+          <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img03.jpg);"></div>
+            <div class="p50c9SwiperInner">
+              <h3>Doriane Pin's F1 Academy Race Livery Revealed</h3>
+              <a href="" class="p50generalBtn">
+                <i></i>
+                <p>Read more</p>
+              </a>
+            </div>
+        </div>
+      </div> 
+
+    </div>
+    <div class="p50c9ContentBtm" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+
+      <div class="p50c9Carousel02F p50c9carousel02">
+         <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+          <div class="b-slider__slide_inner">
+            <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img03.jpg);"></div>
+            <div class="p50c9SwiperInner">
+              <h3>PETRONAS Malaysia Open</h3>
+              <a href="" class="p50generalBtn">
+                <i></i>
+                <p>Read more</p>
+              </a>
+            </div>
+          </div>
+        </div> 
+        <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+          <div class="b-slider__slide_inner">
+            <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img09.jpg);"></div>
+            <div class="p50c9SwiperInner">
+              <h3>The Hydrogen Game Changer</h3>
+              <a href="https://www.petronas.com/flow/technology/hydrogen-game-changer" target="_blank" class="p50generalBtn">
+                <i></i>
+                <p>Read more</p>
+              </a>
+            </div>
+          </div>
+        </div>
+         <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+          <div class="b-slider__slide_inner">
+            <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img04.jpg);"></div>
+            <div class="p50c9SwiperInner">
+              <h3>Doriane Pin's F1 Academy Race Livery Revealed</h3>
+              <a href="" class="p50generalBtn">
+                <i></i>
+                <p>Read more</p>
+              </a>
+            </div>
+          </div>
+        </div> 
+        <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+          <div class="b-slider__slide_inner">
+            <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img10.jpg);"></div>
+            <div class="p50c9SwiperInner">
+              <h3>PETRONAS and Dorna Sports to Introduce New Sustainable Fuel for 2024 Moto2 and Moto3 Season</h3>
+              <a href="https://www.petronas.com/media/media-releases/petronas-and-dorna-sports-introduce-new-sustainable-fuel-2024-moto2-and-moto3" target="_blank" class="p50generalBtn">
+                <i></i>
+                <p>Read more</p>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+          <div class="b-slider__slide_inner">
+            <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img01.jpg);"></div>
+            <div class="p50c9SwiperInner">
+              <h3>Racing the Future: Mercedes-AMGF1 and PETRONAS Power Towards Two Decades of Partnership and Embrace F1's Sustainable Future</h3>
+              <a href="https://www.petronas.com/media/media-releases/racing-future-mercedes-amgf1-and-petronas-power-towards-two-decades" target="_blank" class="p50generalBtn">
+                <i></i>
+                <p>Read more</p>
+              </a>
+            </div>
+          </div>
+        </div>
+         <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+          <div class="b-slider__slide_inner">
+            <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img05.jpg);"></div>
+            <div class="p50c9SwiperInner">
+              <h3>Doriane Pin's F1 Academy Race Livery Revealed</h3>
+              <a href="" class="p50generalBtn">
+                <i></i>
+                <p>Read more</p>
+              </a>
+            </div>
+          </div>
+        </div> 
+      </div>
+
+       <div class="p50c9carouselGeneral p50c9carousel02 owl-carousel owl-theme">
+        <div class="item">
+          <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img03.jpg);"></div>
+            <div class="p50c9SwiperInner">
+              <h3>PETRONAS Malaysia Open</h3>
+              <a href="" class="p50generalBtn">
+                <i></i>
+                <p>Read more</p>
+              </a>
+            </div>
+        </div>
+        <div class="item">
+          <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img04.jpg);"></div>
+            <div class="p50c9SwiperInner">
+              <h3>Doriane Pin's F1 Academy Race Livery Revealed</h3>
+              <a href="" class="p50generalBtn">
+                <i></i>
+                <p>Read more</p>
+              </a>
+            </div>
+        </div>
+        <div class="item">
+          <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img05.jpg);"></div>
+            <div class="p50c9SwiperInner">
+              <h3>Doriane Pin's F1 Academy Race Livery Revealed</h3>
+              <a href="" class="p50generalBtn">
+                <i></i>
+                <p>Read more</p>
+              </a>
+            </div>
+        </div>
+      </div> 
+    
+    </div>
+  </div>
+</div>
+
 
 <div class="p50c10Container" id="altsgs">
   <div class="p50c10Title">
