Update index.html hsn

--- a/index.html
+++ b/index.html
@@ -1454,91 +1454,56 @@ outline: none;
 </div>
 
 
-<div class="p50c9Container">
-  <div class="p50c9ContainerInner">
-    <div class="p50c9VideoBG" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-      <video playsinline="" autoplay="" muted="" preload="none" loop class="JindexRow1Video">
-        <img src="assets/img/p50-c5-pattern-t1.png"/>
-        Your browser does not support the video tag.
-      </video>
-    </div>
-    <div class="p50c9Title">
-      <h3 data-aos="fade-up" data-aos-anchor-placement="top-bottom">Green Energy<br/> <b>GREENEG adalah sebuah usaha tentang energi terbaharukan yang memproduksi Pembangkit</b> <br/>Listrik Tenaga Mikro Hidro untuk wilayah yang belum teraliri listrik dan memiliki potensi air yang baik.</h3>
-    </div>
-    </div>
-  </div>
-  <div class="p50c9Content">
+<div class="p50c9Content">
     <div class="p50c9ContentTop" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
 
       <div class="p50c9Carousel01F p50c9carousel01">
          <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
           <div class="b-slider__slide_inner">
-            <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img01.jpg);"></div>
+            <div class="p50c9SwiperBG" style="background-image: url(assets/img/Upsindex.png);"></div>
             <div class="p50c9SwiperInner">
-              <h3>Doriane Pin's F1 Academy Race Livery Revealed</h3>
-              <a href="" class="p50generalBtn">
-                <i></i>
-                <p>Read more</p>
-              </a>
+              <h3></h3>
             </div>
           </div>
         </div> 
         <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
           <div class="b-slider__slide_inner">
-            <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img06.jpg);"></div>
+            <div class="p50c9SwiperBG" style="background-image: url(assets/img/Surya.png);"></div>
             <div class="p50c9SwiperInner">
-              <h3>Behind the Winning Chemistry - PETRONAS Fluid Technology Solutions (TM)</h3>
-              <a href="https://www.petronas.com/flow/technology/behind-winning-chemistry" target="_blank" class="p50generalBtn">
-                <i></i>
-                <p>Read more</p>
-              </a>
+              <h3></h3>
             </div>
           </div>
         </div>
         <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
           <div class="b-slider__slide_inner">
-            <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img02.jpg);"></div>
+            <div class="p50c9SwiperBG" style="background-image: url(assets/img/pltmh1.png);"></div>
             <div class="p50c9SwiperInner">
-              <h3>PETRONAS Triumphs in the Dakar Rally 2016</h3>
-              <a href="" class="p50generalBtn">
-                <i></i>
-                <p>Read more</p>
+              <h3></h3>
               </a>
             </div>
           </div>
         </div> 
         <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
           <div class="b-slider__slide_inner">
-            <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img07.png);"></div>
+            <div class="p50c9SwiperBG" style="background-image: url(assets/img/Pltmhindex.png);"></div>
             <div class="p50c9SwiperInner">
-              <h3>Unlocking New Opportunities Through Carbon Capture & Storage</h3>
-              <a href="https://www.petronas.com/flow/technology/unlocking-new-opportunities-through-carbon-capture-storage" target="_blank" class="p50generalBtn">
-                <i></i>
-                <p>Read more</p>
-              </a>
+              <h3></h3>
             </div>
           </div>
         </div>
       <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
           <div class="b-slider__slide_inner">
-            <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img03.jpg);"></div>
+            <div class="p50c9SwiperBG" style="background-image: url(assets/img/tengah.png);"></div>
             <div class="p50c9SwiperInner">
-              <h3>Doriane Pin's F1 Academy Race Livery Revealed</h3>
-              <a href="" class="p50generalBtn">
-                <i></i>
-                <p>Read more</p>
-              </a>
+              <h3></h3>
             </div>
           </div>
         </div> 
         <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
           <div class="b-slider__slide_inner">
-            <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img08.jpeg);"></div>
+            <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c3b-img03.png);"></div>
             <div class="p50c9SwiperInner">
-              <h3>Meet ANYmal!</h3>
-              <a href="https://www.petronas.com/flow/technology/meet-anymal" target="_blank" class="p50generalBtn">
-                <i></i>
-                <p>Read more</p>
+              <h3></h3>
               </a>
             </div>
           </div>
@@ -1549,33 +1514,21 @@ outline: none;
       
      <div class="p50c9carouselGeneral p50c9carousel01 owl-carousel owl-theme">
         <div class="item">
-          <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img01.jpg);"></div>
+          <div class="p50c9SwiperBG" style="background-image: url(assets/img/img-ELJE-EL-POWER-SE-T-Series-10-800kVA.png);"></div>
             <div class="p50c9SwiperInner">
-              <h3>Doriane Pin's F1 Academy Race Livery Revealed</h3>
-              <a href="" class="p50generalBtn">
-                <i></i>
-                <p>Read more</p>
-              </a>
+              <h3></h3>
             </div>
         </div>
         <div class="item">
-          <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img02.jpg);"></div>
+          <div class="p50c9SwiperBG" style="background-image: url(assets/img/Gensetindex.png);"></div>
             <div class="p50c9SwiperInner">
-              <h3>PETRONAS Triumphs in the Dakar Rally 2016</h3>
-              <a href="" class="p50generalBtn">
-                <i></i>
-                <p>Read more</p>
-              </a>
+              <h3></h3>
             </div>
         </div>
         <div class="item">
-          <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img03.jpg);"></div>
+          <div class="p50c9SwiperBG" style="background-image: url(assets/img/Genset_Miring2.png);"></div>
             <div class="p50c9SwiperInner">
-              <h3>Doriane Pin's F1 Academy Race Livery Revealed</h3>
-              <a href="" class="p50generalBtn">
-                <i></i>
-                <p>Read more</p>
-              </a>
+              <h3></h3>
             </div>
         </div>
       </div> 
@@ -1586,73 +1539,49 @@ outline: none;
       <div class="p50c9Carousel02F p50c9carousel02">
          <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
           <div class="b-slider__slide_inner">
-            <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img03.jpg);"></div>
+            <div class="p50c9SwiperBG" style="background-image: url(assets/img/ELJE\ ELPRO\ Series\ 1kVA-3kVA.png);"></div>
             <div class="p50c9SwiperInner">
-              <h3>PETRONAS Malaysia Open</h3>
-              <a href="" class="p50generalBtn">
-                <i></i>
-                <p>Read more</p>
-              </a>
+              <h3></h3>
             </div>
           </div>
         </div> 
         <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
           <div class="b-slider__slide_inner">
-            <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img09.jpg);"></div>
+            <div class="p50c9SwiperBG" style="background-image: url(assets/img/ELJE\ ELPRO\ Series\ 6kVA-10kVA.png);"></div>
             <div class="p50c9SwiperInner">
-              <h3>The Hydrogen Game Changer</h3>
-              <a href="https://www.petronas.com/flow/technology/hydrogen-game-changer" target="_blank" class="p50generalBtn">
-                <i></i>
-                <p>Read more</p>
-              </a>
+              <h3></h3>
             </div>
           </div>
         </div>
          <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
           <div class="b-slider__slide_inner">
-            <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img04.jpg);"></div>
+            <div class="p50c9SwiperBG" style="background-image: url(assets/img/ELJE\ SE\ Series\ 50\ 200KVA.png);"></div>
             <div class="p50c9SwiperInner">
-              <h3>Doriane Pin's F1 Academy Race Livery Revealed</h3>
-              <a href="" class="p50generalBtn">
-                <i></i>
-                <p>Read more</p>
-              </a>
+              <h3></h3>
             </div>
           </div>
         </div> 
         <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
           <div class="b-slider__slide_inner">
-            <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img10.jpg);"></div>
+            <div class="p50c9SwiperBG" style="background-image: url(assets/img/Genset\ Miring.png);"></div>
             <div class="p50c9SwiperInner">
-              <h3>PETRONAS and Dorna Sports to Introduce New Sustainable Fuel for 2024 Moto2 and Moto3 Season</h3>
-              <a href="https://www.petronas.com/media/media-releases/petronas-and-dorna-sports-introduce-new-sustainable-fuel-2024-moto2-and-moto3" target="_blank" class="p50generalBtn">
-                <i></i>
-                <p>Read more</p>
-              </a>
+              <h3></h3>
             </div>
           </div>
         </div>
         <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
           <div class="b-slider__slide_inner">
-            <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img01.jpg);"></div>
+            <div class="p50c9SwiperBG" style="background-image: url(assets/img/Genset\ Miring2.png);"></div>
             <div class="p50c9SwiperInner">
-              <h3>Racing the Future: Mercedes-AMGF1 and PETRONAS Power Towards Two Decades of Partnership and Embrace F1's Sustainable Future</h3>
-              <a href="https://www.petronas.com/media/media-releases/racing-future-mercedes-amgf1-and-petronas-power-towards-two-decades" target="_blank" class="p50generalBtn">
-                <i></i>
-                <p>Read more</p>
-              </a>
+              <h3></h3>
             </div>
           </div>
         </div>
          <div class="b-slider__slide" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
           <div class="b-slider__slide_inner">
-            <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img05.jpg);"></div>
+            <div class="p50c9SwiperBG" style="background-image: url(assets/img/Genset\Miring3.png);"></div>
             <div class="p50c9SwiperInner">
-              <h3>Doriane Pin's F1 Academy Race Livery Revealed</h3>
-              <a href="" class="p50generalBtn">
-                <i></i>
-                <p>Read more</p>
-              </a>
+              <h3></h3>
             </div>
           </div>
         </div> 
@@ -1660,33 +1589,21 @@ outline: none;
 
        <div class="p50c9carouselGeneral p50c9carousel02 owl-carousel owl-theme">
         <div class="item">
-          <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img03.jpg);"></div>
+          <div class="p50c9SwiperBG" style="background-image: url(assets/img/img-ELS31Series.png);"></div>
             <div class="p50c9SwiperInner">
-              <h3>PETRONAS Malaysia Open</h3>
-              <a href="" class="p50generalBtn">
-                <i></i>
-                <p>Read more</p>
-              </a>
+              <h3></h3>
             </div>
         </div>
         <div class="item">
-          <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img04.jpg);"></div>
+          <div class="p50c9SwiperBG" style="background-image: url(assets/img/ELJE\ EL\ POWER\ SERIES\ 10-800kVA.png);"></div>
             <div class="p50c9SwiperInner">
-              <h3>Doriane Pin's F1 Academy Race Livery Revealed</h3>
-              <a href="" class="p50generalBtn">
-                <i></i>
-                <p>Read more</p>
-              </a>
+              <h3>/h3>
             </div>
         </div>
         <div class="item">
-          <div class="p50c9SwiperBG" style="background-image: url(assets/img/p50-c8-img05.jpg);"></div>
+          <div class="p50c9SwiperBG" style="background-image: url(assets/img/Genset\ Miring.png);"></div>
             <div class="p50c9SwiperInner">
-              <h3>Doriane Pin's F1 Academy Race Livery Revealed</h3>
-              <a href="" class="p50generalBtn">
-                <i></i>
-                <p>Read more</p>
-              </a>
+              <h3></h3>
             </div>
         </div>
       </div> 
@@ -1694,7 +1611,6 @@ outline: none;
     </div>
   </div>
 </div>
-
 
 <div class="p50c10Container" id="altsgs">
   <div class="p50c10Title">
