--- a/index.html
+++ b/index.html
@@ -1454,7 +1454,20 @@ outline: none;
 </div>
 
 
-<div class="p50c9Content">
+<div class="p50c9Container">
+  <div class="p50c9ContainerInner">
+    <div class="p50c9VideoBG" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+      <video playsinline="" autoplay="" muted="" preload="none" loop class="JindexRow1Video">
+        <img src="assets/img/p50-c5-pattern-t1.png"/>
+        Your browser does not support the video tag.
+      </video>
+    </div>
+    <div class="p50c9Title">
+      <h3 data-aos="fade-up" data-aos-anchor-placement="top-bottom">Green Energy<br/> <b>GREENEG adalah sebuah usaha tentang energi terbaharukan yang memproduksi Pembangkit</b> <br/>Listrik Tenaga Mikro Hidro untuk wilayah yang belum teraliri listrik dan memiliki potensi air yang baik.</h3>
+    </div>
+    </div>
+  </div>
+  <div class="p50c9Content">
     <div class="p50c9ContentTop" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
 
       <div class="p50c9Carousel01F p50c9carousel01">
@@ -1611,7 +1624,6 @@ outline: none;
     </div>
   </div>
 </div>
-
 <div class="p50c10Container" id="altsgs">
   <div class="p50c10Title">
     <h2 data-aos="fade-up" data-aos-anchor-placement="top-bottom">Other Things We Take Pride In</h2>
