--- a/index.html
+++ b/index.html
@@ -2179,10 +2179,10 @@ outline: none;
 
 <div class="p50cFooterContainer">
   <div class="p50cFooterPanel">
-    <img src="images/logo.png" style="display: none;"/>
+    <img src="assets/img/p50-footer-bg.png" style="display: none;"/>
     <div class="p50cFooterContainerInner">
         <div class="p50cFooterTitle">
-            <img src="assets/img/petronas-50-logo.png" data-aos="fade-up" data-aos-anchor-placement="top-bottom"/>
+            <img src="images/logo.png" data-aos="fade-up" data-aos-anchor-placement="top-bottom"/>
             <h2 data-aos="fade-up" data-aos-anchor-placement="top-bottom" style="display: none;"> to 17 August 2024</h2>
         </div>
         
@@ -2237,7 +2237,7 @@ outline: none;
         </div>
 
         <div class="p50cFooterCopyright">
-          <p data-aos="fade-up" data-aos-anchor-placement="top-bottom">Copyright © <span id="dynamic-year" style="font-size: 16px;"></span> Petroliam Nasional Berhad (PETRONAS) <span>(20076-K)</span>.</p>
+          <p data-aos="fade-up" data-aos-anchor-placement="top-bottom">Copyright © <span id="dynamic-year" style="font-size: 16px;"></span> Gracia Pesona Semesta (GPS) <span>(2025)</span>.</p>
           <script>
             Replace the year dynamically
             const currentYear = new Date().getFullYear();
