--- a/index.html
+++ b/index.html
@@ -2182,7 +2182,7 @@ outline: none;
     <img src="assets/img/p50-footer-bg.png" style="display: none;"/>
     <div class="p50cFooterContainerInner">
         <div class="p50cFooterTitle">
-            <img src="images/logo.png" data-aos="fade-up" data-aos-anchor-placement="top-bottom"/>
+            <img src="assets/img/logo.png" data-aos="fade-up" data-aos-anchor-placement="top-bottom"/>
             <h2 data-aos="fade-up" data-aos-anchor-placement="top-bottom" style="display: none;"> to 17 August 2024</h2>
         </div>
         
