--- a/index.html
+++ b/index.html
@@ -1304,7 +1304,6 @@ outline: none;
   <div class="p50c6Title">
     <h2 data-aos="fade-up" data-aos-anchor-placement="top-bottom">ABOUT <b>GREEN ENERGY</b></h2>
   </div>
-  <img src="assets/img/p50-c5-pattern-t1.png" data-aos="fade-left" data-aos-anchor-placement="top-bottom"/>
   <div class="p50c6ContainerInner">
 
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
@@ -1444,6 +1443,7 @@ outline: none;
         Your browser does not support the video tag.
       </video>
     </div>
+  </div>
     <div class="p50c9Title">
       <h3 data-aos="fade-up" data-aos-anchor-placement="top-bottom">Green Energy<br/> <b>GREENEG adalah sebuah usaha tentang energi terbaharukan yang memproduksi Pembangkit</b> <br/>Listrik Tenaga Mikro Hidro untuk wilayah yang belum teraliri listrik dan memiliki potensi air yang baik.</h3>
     </div>
